--- a/app/views/registered_sections/_schedule.html.erb
+++ b/app/views/registered_sections/_schedule.html.erb
@@ -18,12 +18,11 @@
 <div class="rightAlign scheduleLink"><%=extra_link unless section_list.empty?%></div>
 
 <%- if section_list.empty? -%>
-<h4>Your <%=title.downcase%> is currently empty.</h4>
+<h4 type="<%=title%>" class="empty">Your <%=title.downcase%> is currently empty.</h4>
 <%- else -%>
+<h4 type="<%=title%>" class="empty" style="display:none">Your <%=title.downcase%> is currently empty.</h4>
 
-
-
-<table class="courseList">
+<table class="courseList" type="<%=title%>">
   <% for reg_section in section_list %>
     
     <% section = reg_section.section
