--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -20,7 +20,7 @@ registered_section_ids = [] unless defined?(registered_section_ids)
 
 <%- unique_id = generate_unique_id course.id -%>
 
-<tr id="<%=unique_id%>main" class="main">
+<tr id="<%=unique_id%>main" class="main" uid="<%=unique_id%>">
   <td class="expander"><%= expand_button %></td>
   <td><%= course.subject%><%=course.number%></td>
   <td<%= ' colspan="2"' unless options[:show_section_count] || options[:added] %>><%= course.name%></td>
@@ -51,7 +51,7 @@ registered_section_ids = [] unless defined?(registered_section_ids)
   <td colspan="100"><%= pluralize(sections.length, "section") %>
   <%- end -%>
 </tr>
-<tr id="<%=unique_id%>extra" class="extra">
+<tr id="<%=unique_id%>extra" class="extra" uid="<%=unique_id%>">
   <td colspan="100">
     <div class="slider">
       <% # I'm undecided whether or not this should be included in wishlist and registered course lists. -EHA
