--- a/app/views/layouts/_tabs.html.erb
+++ b/app/views/layouts/_tabs.html.erb
@@ -22,7 +22,9 @@ Current semester: <%= Semester.find(session[:semester]).name %><br>
   <%= link_to "Search", courses_path %>
   </li>
   <li class="tab"<%= ( @selected_tab == 'tab2' ) ? ' id="selectedtab"' : '' %>>
-  <%= link_to "<nobr>Degree Requirements</nobr>", degree_requirements_path %>
+  <%= link_to degree_requirements_path do  %>
+    <nobr>Degree Requirements</nobr>
+  <% end %>
   </li>
   <li class="tab"<%= ( @selected_tab == 'tab3' ) ? ' id="selectedtab"' : '' %>>
   <%= link_to "Wishlist", wishlist_sections_path %>
