--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <%= csrf_meta_tag %>
   <%= javascript_include_tag 'jquery-1.4.3.min', 'application' %>
   <%= stylesheet_link_tag 'application' %>
   <% # helper methods below are defined in app/helpers/application_helper.rb %>
