<% form for %> is depricated in Rails 3. Use <%= form_for %>

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Register for a Course</h1>
 
-<% form_tag '/courses', :method => :get do -%>
+<%= form_tag '/courses', :method => :get do -%>
     <%= text_field_tag 'search', h(params[:search]) %> <%= submit_tag 'Search', :name => nil %>
 <% end -%>
 
