--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -33,13 +33,13 @@ registered_section_ids = [] unless defined?(registered_section_ids)
       </td>
       <% if options[:show_drop_button] %>
         <td class="button">
-          <% form_for options[:added_object], :html => { :method => :delete } do |f| %>
+          <%= form_for options[:added_object], :html => { :method => :delete } do |f| %>
             <%= f.submit 'Remove from Schedule', :class => 'rowRemover', :id => nil %>
           <% end %>
       <% end %>
       <% if options[:show_remove_button] %>
         <td class="button">
-          <% form_for options[:added_object], :html => { :method => :delete } do |f| %>
+          <%= form_for options[:added_object], :html => { :method => :delete } do |f| %>
             <%= f.submit 'Remove from Wishlist', :class => 'rowRemover', :id => nil %>
           <% end %>
       <% end %>
