--- a/app/views/semesters/index.html.erb
+++ b/app/views/semesters/index.html.erb
@@ -1,9 +1,9 @@
 <div style="width:25em;">
 <center>
 <h1>Choose a semester</h1>
-<%= link_to image_tag("next_semester.png", :border => 0), @semesters[1] %><br/>
+<%= link_to image_tag("next_semester.png", :border => 0), @semesters[1], :id => 'next_semester' %><br/>
 (Spring 2010)<br/><br/>
-<%= link_to image_tag("this_semester.png", :border => 0), @semesters[0] %><br/>
+<%= link_to image_tag("this_semester.png", :border => 0), @semesters[0], :id => 'this_semester' %><br/>
 (Fall 2009)<br/>
 </center>
 </div>
