--- a/app/views/registered_sections/_schedule.html.erb
+++ b/app/views/registered_sections/_schedule.html.erb
@@ -31,7 +31,7 @@
   	
   	<%- unique_id = generate_unique_id course.id -%>
 		<tr id="<%=unique_id%>main" class="main" uid="<%=unique_id%>">
-		<td class="expander"><%= expand_button %></td>
+		<td class="expander <%= "#{course.subject}#{course.number}" %>"><%= expand_button %></td>
 		<td class="course_code"><%= course.subject%><%=course.number%></td>
 		<td class="course_title"><nobr><%= course.name%></nobr></td>
 		<td class="course_time">
