--- a/app/views/sections/_section.html.erb
+++ b/app/views/sections/_section.html.erb
@@ -4,40 +4,42 @@
 %>
 
 
-<tr>
-  <td><%=section.professor%></td>    
-  <td><%=section.room%></td>
+<tbody class="<%= section.code %>">
+  <tr>
+    <td><%=section.professor%></td>    
+    <td><%=section.room%></td>
 
-  <td>
-    <%- if options[:added] -%>
-      Section <%= section.number %>
-    <%- else -%>
-      <%= section.days %> 
-      <%= section.begin_time.strftime(time_format) %>-<%= section.end_time.strftime(time_format) %>
-    <%- end -%>
-  </td>
-
-  <% if options[:show_wishlist_button] %>
-    <td class="button">
-      <% if wishlist_section_ids.include? section.id %>
-        Wishlisted&nbsp;&nbsp;
-      <% else %>
-        <%= form_for WishlistSection.new, :html => { :id => nil, :class => 'newWishlistSection' } do |f| %>
-          <%= render :partial => 'wishlist_sections/add_button', :locals => { :section_id => section.id } %>
-        <% end %>
-      <% end %>
+    <td>
+      <%- if options[:added] -%>
+	Section <%= section.number %>
+      <%- else -%>
+	<%= section.days %> 
+	<%= section.begin_time.strftime(time_format) %>-<%= section.end_time.strftime(time_format) %>
+      <%- end -%>
     </td>
-  <% end %>
 
-  <% if options[:show_schedule_button] %>
-    <td class="button">
-      <% if registered_section_ids.include? section.id %>
-	&nbsp;Enrolled
-      <% else %>
-	<%= form_for RegisteredSection.new, :html => { :id => nil, :class => 'newRegisteredSection' } do |f| %>
-	  <%= render :partial => 'registered_sections/add_button', :locals => { :section_id => section.id } %>
+    <% if options[:show_wishlist_button] %>
+      <td class="button">
+	<% if wishlist_section_ids.include? section.id %>
+	  Wishlisted&nbsp;&nbsp;
+	<% else %>
+	  <%= form_for WishlistSection.new, :html => { :id => nil, :class => 'newWishlistSection' } do |f| %>
+	    <%= render :partial => 'wishlist_sections/add_button', :locals => { :section_id => section.id } %>
+	  <% end %>
 	<% end %>
-      <% end %>
-    </td>
-  <% end %>
-</tr>
+      </td>
+    <% end %>
+
+    <% if options[:show_schedule_button] %>
+      <td class="button">
+	<% if registered_section_ids.include? section.id %>
+	  &nbsp;Enrolled
+	<% else %>
+	  <%= form_for RegisteredSection.new, :html => { :id => nil, :class => 'newRegisteredSection' } do |f| %>
+	    <%= render :partial => 'registered_sections/add_button', :locals => { :section_id => section.id } %>
+	  <% end %>
+	<% end %>
+      </td>
+    <% end %>
+  </tr>
+</tbody>
