--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -20,54 +20,56 @@ registered_section_ids = [] unless defined?(registered_section_ids)
 
 <%- unique_id = generate_unique_id course.id -%>
 
-<tr id="<%=unique_id%>main" class="main" uid="<%=unique_id%>">
-  <td class="expander <%= "#{course.subject}#{course.number}" %>"><%= expand_button %></td>
-  <td><%= course.subject%><%=course.number%></td>
-  <td<%= ' colspan="2"' unless options[:show_section_count] || options[:added] %>><%= course.name%></td>
-  <td>
-    <%- if options[:added] -%>
-      <nobr>
-      <%= sections.first.days %> 
-      <%= sections.first.begin_time.strftime(time_format) %>-<%= sections.first.end_time.strftime(time_format) %>
-      </nobr>
-      </td>
-      <% if options[:show_drop_button] %>
-        <td class="button">
-          <%= form_for options[:added_object], :html => { :method => :delete } do |f| %>
-            <%= f.submit 'Remove from Schedule', :class => 'rowRemover', :id => nil %>
-          <% end %>
-      <% end %>
-      <% if options[:show_remove_button] %>
-        <td class="button">
-          <%= form_for options[:added_object], :html => { :method => :delete } do |f| %>
-            <%= f.submit 'Remove from Wishlist', :class => 'rowRemover', :id => nil %>
-          <% end %>
-      <% end %>
-    <%- else -%>
-      <%= pluralize(course.credits, "Credit hour") %>
+<tbody class="<%= course.code %>">
+  <tr id="<%=unique_id%>main" class="main" uid="<%=unique_id%>">
+    <td class="expander"><%= expand_button %></td>
+    <td><%= course.subject%><%=course.number%></td>
+    <td<%= ' colspan="2"' unless options[:show_section_count] || options[:added] %>><%= course.name%></td>
+    <td>
+      <%- if options[:added] -%>
+        <nobr>
+        <%= sections.first.days %> 
+        <%= sections.first.begin_time.strftime(time_format) %>-<%= sections.first.end_time.strftime(time_format) %>
+        </nobr>
+        </td>
+        <% if options[:show_drop_button] %>
+          <td class="button">
+            <%= form_for options[:added_object], :html => { :method => :delete } do |f| %>
+              <%= f.submit 'Remove from Schedule', :class => 'rowRemover', :id => nil %>
+            <% end %>
+        <% end %>
+        <% if options[:show_remove_button] %>
+          <td class="button">
+            <%= form_for options[:added_object], :html => { :method => :delete } do |f| %>
+              <%= f.submit 'Remove from Wishlist', :class => 'rowRemover', :id => nil %>
+            <% end %>
+        <% end %>
+      <%- else -%>
+        <%= pluralize(course.credits, "Credit hour") %>
+      <%- end -%>
+    </td>
+    <%- if options[:show_section_count] -%>
+    <td colspan="100"><%= pluralize(sections.length, "section") %>
     <%- end -%>
-  </td>
-  <%- if options[:show_section_count] -%>
-  <td colspan="100"><%= pluralize(sections.length, "section") %>
-  <%- end -%>
-</tr>
-<tr id="<%=unique_id%>extra" class="extra" uid="<%=unique_id%>">
-  <td colspan="100">
-    <div class="slider">
-      <% # I'm undecided whether or not this should be included in wishlist and registered course lists. -EHA
-      %>
-      <% unless false && options[:added] %>
-        <div class="description">
-          <%=course.description%>
-        </div>
-      <% end %>
-      <table class="sectionList">
-        <%= render  :partial => "sections/section",
-                    :collection => sections,
-                    :locals => { :options => options,
-                                 :wishlist_section_ids => wishlist_section_ids,
-                                 :registered_section_ids => registered_section_ids } %>
-      </table>
-    </div>
-  </td>
-</tr>
+  </tr>
+  <tr id="<%=unique_id%>extra" class="extra" uid="<%=unique_id%>">
+    <td colspan="100">
+      <div class="slider">
+        <% # I'm undecided whether or not this should be included in wishlist and registered course lists. -EHA
+        %>
+        <% unless false && options[:added] %>
+          <div class="description">
+            <%=course.description%>
+          </div>
+        <% end %>
+        <table class="sectionList">
+          <%= render  :partial => "sections/section",
+                      :collection => sections,
+                      :locals => { :options => options,
+                                   :wishlist_section_ids => wishlist_section_ids,
+                                   :registered_section_ids => registered_section_ids } %>
+        </table>
+      </div>
+    </td>
+  </tr>
+</tbody>
