Label the currently selected semester "semester" instead of the more confusing "current semester"

--- a/app/views/layouts/_tabs.html.erb
+++ b/app/views/layouts/_tabs.html.erb
@@ -13,7 +13,7 @@ end
 
 <% if session[:semester] %>
 <div class="rightAlign">
-Current semester: <%= Semester.find(session[:semester]).name %><br>
+Semester: <%= Semester.find(session[:semester]).name %><br>
 <%= link_to "Change semester", semesters_path%>
 </div>
 
