--- a/app/views/courses/_course_list.html.erb
+++ b/app/views/courses/_course_list.html.erb
@@ -1,4 +1,4 @@
-  <table class="courseList">
+  <table class="course-list">
     <%= render :partial => "courses/course", :collection => course_list,
                :locals => { :options => defined?(options) ? options : {},
                             :wishlist_section_ids => wishlist_section_ids,
