--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -17,7 +17,7 @@
                 :show_schedule_button => true} %>
 
 <% if @courses.any? %>
-  <table class="courseList">
+  <table class="course-list">
     <%= render :partial => "courses/course", :collection => @courses,
                :locals => { :options => options,
                             :wishlist_section_ids => @wishlist_section_ids,
