--- a/app/views/layouts/freshtracks.html.erb
+++ b/app/views/layouts/freshtracks.html.erb
@@ -21,20 +21,20 @@ end
 %>
 
 <% if session[:semester] %>
-<div class="rightAlign">
+<div class="right-align">
 Semester: <%= Semester.find(session[:semester]).name %> (<%= link_to "Change semester", semesters_path%>) | <%= link_to "Sign out", '/sign_out', :method => :delete %> 
 </div>
 
 <ul class="tab-list">
-  <li class="tab"<%= ( @selected_tab == 'tab1' ) ? ' id=selectedTab' : '' %>>
+  <li class="tab"<%= ( @selected_tab == 'tab1' ) ? ' id="selected-tab"' : '' %>>
   <%= link_to "Search", courses_path %>
   </li>
-  <li class="tab"<%= ( @selected_tab == 'tab2' ) ? ' id=selectedTab' : '' %>>
+  <li class="tab"<%= ( @selected_tab == 'tab2' ) ? ' id="selected-tab"' : '' %>>
   <%= link_to degree_requirements_path do  %>
     <nobr>Degree Requirements</nobr>
   <% end %>
   </li>
-  <li class="tab"<%= ( @selected_tab == 'tab3' ) ? ' id=selectedTab' : '' %>>
+  <li class="tab"<%= ( @selected_tab == 'tab3' ) ? ' id="selected-tab"' : '' %>>
   <%= link_to "Wishlist", wishlist_sections_path %>
   </li>
 </ul>
