--- a/app/views/sections/_section_list.erb
+++ b/app/views/sections/_section_list.erb
@@ -1,7 +1,7 @@
 <tr id="<%=course.id%>extra" class="extra">
 
   <td colspan=4><div><%=course.description%>
-  <table class='sectionList'>
+  <table class='section-list'>
     <%= render  :partial => "sections/section", 
                 :collection => course.sections.find_all_by_semester_id(session[:semester]),
                 :locals => {:show_wishlist_button => "true", :show_schedule_button => "true"} %>
