--- a/app/views/degree_requirements/index.html.erb
+++ b/app/views/degree_requirements/index.html.erb
@@ -3,7 +3,7 @@
 <table class="course-list">
   <% for req in @degree_requirements %>
     <% classname = req.required.class.name.underscore %>
-    <% # classname will be either group or section %>
+    <% # classname will be either group or course %>
     
     <% options = {:show_wishlist_button => true,
                   :show_schedule_button => true} %>
