--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,11 @@
 <html>
 <head>
   <%= csrf_meta_tag %>
-  <%= javascript_include_tag 'jquery-1.5.min', 'application', 'rails' %>
 
-  <%= stylesheet_link_tag 'application' %>
+  <%= stylesheet_link_tag 'application', 'jquery-ui-1.8.10.custom' %>
   <% # helper methods below are defined in app/helpers/application_helper.rb %>
   <% include_filename = current_action_include_filename(controller) %>
   <%= stylesheet_link_tag include_filename if css_exists?(include_filename) %>
+
+  <%= javascript_include_tag 'jquery-1.5.min', 'jquery-ui-1.8.10.custom.min.js', 'application', 'rails' %>
   <%= javascript_include_tag include_filename if js_exists?(include_filename) %>
