--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,2 +1,74 @@
-<%= render :partial => 'layouts/header' %>
-<%= render :partial => 'layouts/tabs' %>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8"/>
+  <%= csrf_meta_tag %>
+
+  <!-- The 1140px Grid -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="stylesheet" href="css/1140.css" type="text/css" media="screen" />
+  <!--[if lte IE 9]>
+  <link rel="stylesheet" href="css/ie.css" type="text/css" media="screen" />
+  <![endif]-->
+  <!-- Type and image presets -->
+  <link rel="stylesheet" href="css/typeimg.css" type="text/css" media="screen" />
+  <!-- Make minor type adjustments for 1024 monitors -->
+  <link rel="stylesheet" href="css/smallerscreen.css" media="only screen and (max-width: 1023px)" />
+  <!-- Resets grid for mobile -->
+  <link rel="stylesheet" href="css/mobile.css" media="handheld, only screen and (max-width: 767px)" />
+  <!-- Put your layout here -->
+  <%'(unused)<link rel="stylesheet" href="css/layout.css" type="text/css" media="screen" />'%>
+
+  <%= stylesheet_link_tag 'application', 'jquery-ui-1.8.10.custom' %>
+  <% # helper methods below are defined in app/helpers/application_helper.rb %>
+  <% include_filename = current_action_include_filename(controller) %>
+  <%= stylesheet_link_tag include_filename if css_exists?(include_filename) %>
+
+  <%= javascript_include_tag 'jquery-1.5.1.min', 'jquery-ui-1.8.10.custom.min.js', 'rails', 'autocomplete-rails', 'application' %>
+  <%= javascript_include_tag include_filename if js_exists?(include_filename) %>
+
+</head>
+<body>
+<div style="border: 2px #CC0000 solid; width: 15em; padding: 1em; margin-bottom: 2ex;">
+<span style="font-size: x-large; color: #C00; font-weight: bold; font-family: ubuntu, helvetica, sans-serif">FreshTracks</span>
+</div>
+
+
+<%
+if(params[:action] == "index")
+  case params[:controller]
+    when "courses"
+      @selected_tab = 'tab1'
+    when "degree_requirements"
+      @selected_tab = 'tab2'
+    when "wishlist_sections"
+      @selected_tab = 'tab3'
+  end
+end
+%>
+
+<% if session[:semester] %>
+<div class="right-align">
+Semester: <%= Semester.find(session[:semester]).name %> (<%= link_to "Change semester", semesters_path%>) | <%= link_to "Sign out", '/sign_out', :method => :delete %> 
+</div>
+
+<ul class="tab-list">
+  <li class="tab"<%= ( @selected_tab == 'tab1' ) ? ' id="selected-tab"' : '' %>>
+  <%= link_to "Search", courses_path %>
+  </li>
+  <li class="tab"<%= ( @selected_tab == 'tab2' ) ? ' id="selected-tab"' : '' %>>
+  <%= link_to degree_requirements_path do  %>
+    <nobr>Degree Requirements</nobr>
+  <% end %>
+  </li>
+  <li class="tab"<%= ( @selected_tab == 'tab3' ) ? ' id="selected-tab"' : '' %>>
+  <%= link_to "Wishlist", wishlist_sections_path %>
+  </li>
+</ul>
+
+<% end %>
+<div style="border: 2px #C00 solid; padding: 1ex;">
+<%= yield %>
+</div>
+</body>
+</html>
