Make registered_section validations and the display of courses in degree_requirements multi-user (i.e. don't show "enrolled" when another user is actually the one enrolled). Also, minor style changes (links blue instead of red, header now a link).

--- a/app/views/layouts/freshtracks.html.erb
+++ b/app/views/layouts/freshtracks.html.erb
@@ -3,7 +3,7 @@
 </head>
 <body style="margin: auto; width: 90%; padding-top: 2em;" >
 <div style="border: 2px #CC0000 solid; width: 15em; padding: 1em; margin-bottom: 2ex;">
-<span style="font-size: x-large; color: #C00; font-weight: bold; font-family: ubuntu, helvetica, sans-serif">FreshTracks</span>
+<a href="/" style="font-size: x-large; color: #C00; font-weight: bold; font-family: ubuntu, helvetica, sans-serif; text-decoration: none">FreshTracks</a>
 </div>
 
 
